<resources>
    <string name="app_name">My Application</string>
    <string name="please_enter">Please enter a number</string>
    <string name="bing">Bingo</string>
    <string name="big">Bigger</string>
    <string name="reminder">Message</string>
    <string name="sma">Smaller</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="replay">Replay game</string>
    <string name="sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
