...
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.055"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/input_num"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_prompt"/>
    <Button
            android:text="@android:string/ok"
...
